# tree-sitter-stlcpp

./: .envrc  .gitignore  AGENTS.md  APPLICATION_PARSING.md  Cargo.toml  README.md  binding.gyp  default.nix  grammar.js  package-lock.json  package.json  package.nix  tree-sitter.json
.github/: SETUP_COMPLETE.md  TESTING.md
.github/workflows/: README.md  publish-zed-release.yml  test.yml
bindings/rust/: lib.rs
examples/: io.stlc  operators.stlc
npins/: sources.json
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: README.md  test.sh
test/corpus/: applications.txt  comments.txt  control_flow.txt  declarations.txt  functions.txt  lists.txt  operators.txt  sum_types.txt  types.txt
test/fixtures/: basic_declaration.stlc  church.stlc  fib.stlc  list.stlc  list2.stlc  list_case.stlc  sum_types.stlc
test/fixtures-wip/: README.md  comments.stlc  compose.stlc
